--- a/app/src/main/res/menu/menu_header.xml
+++ b/app/src/main/res/menu/menu_header.xml
@@ -1,11 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="me.objectyan.weatherbaby.MainActivity">
+    tools:context="me.objectyan.weatherbaby.activities.MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:id="@+id/menu_main_settings"
         android:icon="@drawable/ic_toolbar_setting"
+        android:orderInCategory="100"
         android:title="@string/toolbar_menu_settings"
         app:showAsAction="always" />
 </menu>
