--- a/app/src/main/res/layout/activity_city_manage.xml
+++ b/app/src/main/res/layout/activity_city_manage.xml
@@ -15,8 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
+        android:horizontalSpacing="5dp"
         android:listSelector="@android:color/transparent"
-        android:numColumns="3"
+        android:numColumns="auto_fit"
         android:scrollbars="none"
         android:verticalSpacing="5dp">
 
