--- a/app/src/main/res/layout/activity_add_city.xml
+++ b/app/src/main/res/layout/activity_add_city.xml
@@ -61,8 +61,7 @@
     <RelativeLayout
         android:id="@+id/all_city"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone">
+        android:layout_height="wrap_content">
 
         <GridView
             android:id="@+id/search_result"
