--- a/app/src/main/res/layout/activity_add_city_search.xml
+++ b/app/src/main/res/layout/activity_add_city_search.xml
@@ -2,10 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="8dp">
 
     <TextView
         android:id="@+id/search_item"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:text="@string/city_manage"
+        android:textColor="@color/colorTemp"
+        android:textSize="15dp" />
 </LinearLayout>
