--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,18 @@
 
     <include layout="@layout/main_header" />
 
-    <fragment
-        android:id="@+id/main_fragment_weather"
-        android:name="me.objectyan.weatherbaby.fragment.WeatherPagerFragment"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/wpaf_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="40dp" />
+        android:layout_marginTop="8dp" />
+
+    <me.relex.circleindicator.CircleIndicator
+        android:id="@+id/wpaf_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:layout_gravity="top"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="36dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
