--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
-    <include layout="@layout/main_header" />
+    <include layout="@layout/fragment_weather_header" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
     <me.relex.circleindicator.CircleIndicator
         android:id="@+id/wpaf_indicator"
         android:layout_width="match_parent"
-        android:layout_height="8dp"
+        android:layout_height="15dp"
         android:layout_gravity="top"
         android:layout_marginTop="38dp"
         android:layout_marginBottom="5dp" />
