--- a/app/src/main/res/layout/fragment_weather_today.xml
+++ b/app/src/main/res/layout/fragment_weather_today.xml
@@ -104,14 +104,22 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/today_temp_air"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/today_temp_atmosphere"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="空气优"
+                android:text="@string/today_temp_air"
                 android:textSize="15sp" />
         </LinearLayout>
 
