--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipe_weather_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.WeatherFragment">
@@ -52,4 +53,4 @@
 
         </LinearLayout>
     </ScrollView>
-</FrameLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
