--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -32,6 +32,11 @@
                 android:layout_height="wrap_content" />
 
             <include
+                layout="@layout/fragment_weather_lifestyle"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+            <include
                 layout="@layout/fragment_weather_atmosphere"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" />
