--- a/app/src/main/res/drawable/ic_lifestyle_airing.xml
+++ b/app/src/main/res/drawable/ic_lifestyle_airing.xml
@@ -1,9 +1,22 @@
-<vector android:autoMirrored="true" android:height="1024dp"
-    android:viewportHeight="1024" android:viewportWidth="1024"
-    android:width="1024dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFF" android:pathData="M759.8,534.1H300.9c-0.2,0 -0.4,0 -0.6,0.1 -0.2,0 -0.4,-0.1 -0.6,-0.1 -12.7,0 -23,10.4 -23,23v348.1c0,12.7 10.4,23 23,23 0.2,0 0.4,-0.1 0.6,-0.1 0.2,0 0.4,0.1 0.6,0.1h458.8c6.1,0 11.1,-5 11.1,-11.1v-372c0,-6 -5,-11 -11,-11z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M528.9,98.7c-46.4,0 -86.7,33.9 -90.7,79.4 -0.1,0.7 -0.1,1.4 -0.1,2.1v0.3c0,9 7.3,16.4 16.4,16.4 9.1,0 16.4,-7.3 16.4,-16.4 1.3,-14.2 8.3,-24.3 14.2,-30.6 11.2,-11.7 27.2,-18.5 43.9,-18.5 32.1,0 58.2,26.1 58.2,58.2 0,12.2 -5.1,23.5 -15.3,33.4 -11.8,11.6 -29.4,20.5 -50.9,25.8 -8.8,2.2 -16.9,5 -24,7.4 -0.4,0.1 -0.9,0.3 -1.3,0.4v63.7h32.8v-39.6c0.1,0 0.3,-0.1 0.4,-0.1 54.4,-13.5 91,-47.4 91,-91 0,-50.2 -40.8,-90.9 -91,-90.9z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M873.9,486.3L512.1,295.2 150.3,486.3c-18.6,9.6 -31,27.5 -31,48.1 0,30.6 27.6,55.4 61.8,55.4L843.3,589.8c34.1,0 61.8,-24.8 61.8,-55.4 -0.1,-20.6 -12.6,-38.5 -31.2,-48.1zM843.2,557.1L181,557.1c-15.7,0 -29,-10.4 -29,-22.7 0,-7.6 5,-14.7 13.3,-19l0.1,-0.1 0.1,-0.1L512,332.1l346.6,183.1 0.1,0.1 0.1,0.1c8.3,4.3 13.3,11.4 13.3,19 0.1,12.3 -13.2,22.7 -28.9,22.7z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M735.7,904.8H278.1c-6.4,0 -11.7,-5.3 -11.7,-11.7V522.3c0,-6.4 5.3,-11.7 11.7,-11.7h457.6c6.4,0 11.7,5.3 11.7,11.7v370.8c0,6.4 -5.3,11.7 -11.7,11.7z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M276.3,904.8c-12.7,0 -23,-10.4 -23,-23V533.7c0,-12.7 10.4,-23 23,-23 12.7,0 23,10.4 23,23v348.1c0.1,12.6 -10.3,23 -23,23z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="1024dp"
+    android:height="1024dp"
+    android:autoMirrored="true"
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M759.8,534.1H300.9c-0.2,0 -0.4,0 -0.6,0.1 -0.2,0 -0.4,-0.1 -0.6,-0.1 -12.7,0 -23,10.4 -23,23v348.1c0,12.7 10.4,23 23,23 0.2,0 0.4,-0.1 0.6,-0.1 0.2,0 0.4,0.1 0.6,0.1h458.8c6.1,0 11.1,-5 11.1,-11.1v-372c0,-6 -5,-11 -11,-11z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M528.9,98.7c-46.4,0 -86.7,33.9 -90.7,79.4 -0.1,0.7 -0.1,1.4 -0.1,2.1v0.3c0,9 7.3,16.4 16.4,16.4 9.1,0 16.4,-7.3 16.4,-16.4 1.3,-14.2 8.3,-24.3 14.2,-30.6 11.2,-11.7 27.2,-18.5 43.9,-18.5 32.1,0 58.2,26.1 58.2,58.2 0,12.2 -5.1,23.5 -15.3,33.4 -11.8,11.6 -29.4,20.5 -50.9,25.8 -8.8,2.2 -16.9,5 -24,7.4 -0.4,0.1 -0.9,0.3 -1.3,0.4v63.7h32.8v-39.6c0.1,0 0.3,-0.1 0.4,-0.1 54.4,-13.5 91,-47.4 91,-91 0,-50.2 -40.8,-90.9 -91,-90.9z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M873.9,486.3L512.1,295.2 150.3,486.3c-18.6,9.6 -31,27.5 -31,48.1 0,30.6 27.6,55.4 61.8,55.4L843.3,589.8c34.1,0 61.8,-24.8 61.8,-55.4 -0.1,-20.6 -12.6,-38.5 -31.2,-48.1zM843.2,557.1L181,557.1c-15.7,0 -29,-10.4 -29,-22.7 0,-7.6 5,-14.7 13.3,-19l0.1,-0.1 0.1,-0.1L512,332.1l346.6,183.1 0.1,0.1 0.1,0.1c8.3,4.3 13.3,11.4 13.3,19 0.1,12.3 -13.2,22.7 -28.9,22.7z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M735.7,904.8H278.1c-6.4,0 -11.7,-5.3 -11.7,-11.7V522.3c0,-6.4 5.3,-11.7 11.7,-11.7h457.6c6.4,0 11.7,5.3 11.7,11.7v370.8c0,6.4 -5.3,11.7 -11.7,11.7z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M276.3,904.8c-12.7,0 -23,-10.4 -23,-23V533.7c0,-12.7 10.4,-23 23,-23 12.7,0 23,10.4 23,23v348.1c0.1,12.6 -10.3,23 -23,23z" />
 </vector>
