--- a/app/src/main/res/drawable/ic_lifestyle_cold.xml
+++ b/app/src/main/res/drawable/ic_lifestyle_cold.xml
@@ -5,10 +5,10 @@
     android:viewportWidth="1024"
     android:viewportHeight="1024">
     <path
-        android:fillColor="#000"
+        android:fillColor="#f0f0f0"
         android:pathData="M512,512m-512,0a512,512 0,1 0,1024 0,512 512,0 1,0 -1024,0Z" />
     <path
-        android:fillColor="#000"
+        android:fillColor="#f0f0f0"
         android:pathData="M1013.76,408.58C965.63,175.1 759.81,0 512,0 229.38,0 0,229.38 0,512c0,123.9 44.03,236.54 116.74,324.61C203.78,884.74 303.1,911.36 409.6,911.36c301.06,0 550.91,-217.09 604.16,-502.78z" />
     <path
         android:fillColor="#fff"
